# mumbler

./: .gitignore  Cargo.toml  Kick.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/api/: Cargo.toml
crates/api/src/: config.rs  hash.rs  id.rs  ids.rs  lib.rs  macros.rs  peer_id.rs  properties.rs  public_key.rs  remote_id.rs  server.rs  stable_id.rs  ty.rs  value.rs  vec3.rs
crates/mumblelink/: Cargo.toml  README.md
crates/mumblelink/examples/: mumblelink.rs
crates/mumblelink/src/: lib.rs  unix.rs  windows.rs
crates/mumbler/: Cargo.toml
crates/mumbler/examples/: mumbler-client.rs
crates/mumbler/migrations/: 0000-00-00-0-setup.sql  2025-01-05.sql  2026-03-05.sql  2026-03-23.sql
crates/mumbler/src/: backend.rs  client.rs  crypto.rs  database.rs  hash.rs  ids.rs  lib.rs  main.rs  mumblelink.rs  paths.rs  sorting.rs  tls.rs
crates/mumbler/src/client/: fake.rs  impl.rs
crates/mumbler/src/crypto/: dictionary.rs
crates/mumbler/src/database/: mod.rs
crates/mumbler/src/remote/: api.rs  client.rs  mod.rs  peer.rs  server.rs
crates/mumbler/src/tls/: disabled.rs
crates/mumbler/src/web/: bundle.rs  imaging.rs  mod.rs  ws.rs
crates/server/: Cargo.toml
crates/server/examples/: client.rs
crates/server/src/: client.rs  lib.rs  main.rs  peer.rs  server.rs
crates/sorting/: Cargo.toml
crates/sorting/src/: lib.rs
crates/web/: Cargo.toml  index.html
crates/web/src/: consts.rs  drag_over.rs  error.rs  hierarchy.rs  images.rs  lib.rs  log.rs  main.rs  objects.rs  order.rs  peers.rs  state.rs
crates/web/src/components/: animation_frame.rs  app.rs  context_menu_dropdown.rs  crop.rs  crop_modal.rs  dashboard.rs  drop_image.rs  dynamic_canvas.rs  group_settings.rs  help.rs  help_modal.rs  icon.rs  image_gallery.rs  image_gallery_modal.rs  image_upload.rs  log.rs  macros.rs  map.rs  mod.rs  modal.rs  mumble_status.rs  navigation.rs  object_list.rs  object_settings.rs  remote_status.rs  render.rs  room_settings.rs  rooms.rs  rooms_page.rs  settings.rs  setup_channel.rs  static_settings.rs  temporary_url.rs  token_settings.rs
crates/web/style/: _grid.scss  _icons.scss  _loader.scss  _log.scss  style.scss
examples/: mumbler.rs
licenses/: README.md
src/: lib.rs
