[workspace]
resolver = "3"

members = [
    "crates/*",
]

[workspace.dependencies]
musli-web = { version = "0.2.1", default-features = false }

[patch.crates-io]
musli-web = { path = "../musli/crates/musli-web" }
musli-core = { path = "../musli/crates/musli-core" }
musli = { path = "../musli/crates/musli" }
 