[package]
name = "api"
edition = "2024"
publish = false

[dependencies]
musli-web = { version = "0.1.7", default-features = false, features = ["api"] }
musli-core = { version = "0.1.4", default-features = false }
serde_core = { version = "1.0.228", default-features = false }
base64 = { version = "0.22.1", default-features = false }
