[package]
name = "api"
edition = "2024"
publish = false

[dependencies]
musli-web = { workspace = true, features = ["api"] }
musli-core = { version = "0.1.4", default-features = false }
serde_core = { version = "1.0.228", default-features = false }
base64 = { version = "0.22.1", default-features = false }

sqll = { workspace = true, optional = true }