[package]
name = "mumbler"
edition = "2024"
publish = false
default-run = "mumbler"

[features]
default = ["tls", "webbrowser", "bundle"]
bundle = []
tls = ["dep:tokio-rustls", "dep:rustls", "tokio/fs", "dep:webpki-roots"]

[dependencies]
api = { path = "../api", features = ["sqll"] }
mumblelink = { path = "../mumblelink"}
sorting = { path = "../sorting" }

jiff = "0.2.23"
rust-embed = "8.11.0"
sqll = { workspace = true }
tokio = { version = "1.50.0", features = ["full"] }
mime_guess = { version = "2.0.4", default-features = false }
axum = { version = "0.8.1", features = ["http1", "json", "query", "tracing", "http2", "ws"] }
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
directories-next = "2.0.0"
clap = { version = "4.5.60", features = ["derive"] }
tokio-stream = "0.1.18"
musli-web = { workspace = true, features = ["axum08"] }
musli = { version = "0.0.149", features = ["storage", "descriptive"] }
relative-path = "2.0.1"
tower-http = { version = "0.6.8", features = ["cors"] }
rand = "0.10.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
image = "0.25.9"
base64 = { version = "0.22.1", default-features = false }
webbrowser = { version = "1.1.0", optional = true }

musli-core = { version = "0.1.4", default-features = false }
parking_lot = "0.12.5"
bstr = { version = "1.3.0", default-features = false }
async-fuse = "1.0.1"
tokio-rustls = { version = "0.26.4", optional = true }
rustls = { version = "0.23.37", optional = true }
webpki-roots = { version = "1.0.6", optional = true }

[[bin]]
name = "mumbler-client"

[[bin]]
name = "mumbler-server"
