[package]
name = "server"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
clap = { version = "4.5.60", features = ["derive"] }
slab = "0.4.12"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
musli-web = { version = "0.1.7", default-features = false, features = ["api"] }
musli-core = { version = "0.1.4", default-features = false }
musli = { version = "0.0.149", features = ["storage"] }
api = { path = "../api" }
