[package]
name = "web"
edition = "2024"
publish = false

[dependencies]
api = { path = "../api" }

anyhow = "1.0.83"
gloo = "0.11.0"
tracing = "0.1"
musli-web = { version = "0.1.6", default-features = false, features = ["web03", "yew022"] }
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "MouseEvent", "WheelEvent", "Event", "File", "FileList", "HtmlInputElement"] }
tracing-wasm = "0.2"
yew = { version = "0.22.0", features = ["csr"] }
yew-router = "0.19.0"
url = "2.5.0"
derive_more = { version = "2.0.1", default-features = false, features = ["from"] }
