[package]
name = "web"
edition = "2024"
publish = false

[dependencies]

api = { path = "../api" }
sorting = { path = "../sorting" }

anyhow = "1.0.83"
gloo = "0.11.0"
tracing = "0.1"
musli-web = { workspace = true, features = ["web03", "yew022"] }
wasm-bindgen = "0.2.92"
tracing-wasm = "0.2"
yew = { version = "0.22.0", features = ["csr"] }
yew-router = "0.19.0"
url = "2.5.0"
slab = "0.4.12"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "MouseEvent",
    "WheelEvent",
    "Event",
    "File",
    "FileList",
    "HtmlInputElement",
    "ResizeObserver",
    "ResizeObserverEntry",
    "HtmlImageElement",
    "DomRect"
]
